--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
 
-
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+<ng-container *ngFor="let header of headers">
+  <li class="nav-item" routerLinkActive="active">
+    <a
+      class="nav-link"
+      id="profile-tab"
+      data-toggle="tab"
+      [routerLink]="header.link"
+      role="tab"
+      aria-controls="profile"
+      aria-selected="true"
+      >{{header.name}}</a
+    >
+  </li>
+</ng-container>
+</ul>
 <router-outlet></router-outlet>
