--- a/src/app/features/pipe/pipes/pipes.component.html
+++ b/src/app/features/pipe/pipes/pipes.component.html
@@ -1,1 +1,14 @@
-<p>pipes works!</p>
+<div class="row justify-content-center">
+    <table class="table">
+      <thead class="table-dark">
+        <tr>
+            <td>date</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>{{ today | date : 'dd-mm-yyyy' }}</td>
+        </tr>
+      </tbody>
+    </table>
+</div>
