--- a/src/app/features/pipe/pipes/pipes.component.html
+++ b/src/app/features/pipe/pipes/pipes.component.html
@@ -1,14 +1,56 @@
-<div class="row justify-content-center">
-    <table class="table">
-      <thead class="table-dark">
-        <tr>
-            <td>date</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>{{ today | date : 'dd-mm-yyyy' }}</td>
-        </tr>
-      </tbody>
-    </table>
+<div class="row m-4 d-flex justify-content-center">
+  <div class="col justify-content-center">
+    <div class="card">
+      <div class="card-header">
+        <h2>Pipes in Angular</h2>
+      </div>
+      <div class="card-body">
+        <div>
+          <h1>Date</h1>
+          <li>{{ today | date : "dd-MM-yyyy" }}</li>
+        </div>
+        <div>
+          <h1>Name</h1>
+          <li>{{ "divya gabani" | titlecase }}</li>
+        </div>
+        <div>
+          <h2>Currency Pipe</h2>
+          <li>{{ a | currency }}</li>
+          <li>{{ a | currency : "CAD" }}</li>
+          <li>{{ a | currency : "CAD" : "code" }}</li>
+          <li>{{ b | currency : "CAD" : "symbol" : "4.2-2" }}</li>
+          <li>{{ b | currency : "CAD" : "symbol-narrow" : "4.2-2" }}</li>
+          <li>{{ b | currency : "CAD" : "symbol-narrow" : "4.2-2" }}</li>
+          <li>{{ b | currency : "CAD" : "symbol" : "4.2-2" : "fr" }}</li>
+          <li>{{ b | currency : "CLP" }}</li>
+        </div>
+        <div>
+          <h2>DecimalPipe</h2>
+          <li>{{ pi | number }}</li>
+          <li>{{ pi | number : "4.1-5" }}</li>
+          <li>{{ pi | number : "4.1-5" : "fr" }}</li>
+        </div>
+        <div>
+          <h2>PercentPipe PIPE</h2>
+          <li>{{ x | percent }}</li>
+          <li>{{ y | percent : "4.3-5" }}</li>
+          <li>{{ y | percent : "4.3-5" : "fr" }}</li>
+        </div>
+        <div>
+          <h2>Custom</h2>
+          <input [(ngModel)]="searchTerm" placeholder="Filter" />
+          <ul>
+            <li *ngFor="let person of people | filter : searchTerm : 'name'">
+              {{ person.name }} | {{ person.age }} | {{ person.country }}
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h2>Paragraph</h2>
+          <input [(ngModel)]="filterParagraph" placeholder="Enter Text" />
+          <p>{{ filterParagraph | filterPipe }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
