Testing dynamic pipe and filter in demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,44 @@
     </li>
   </ng-container>
 </ul> -->
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item" routerLink="home">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item" routerLink="common">
+          <a class="nav-link" href="input">Features</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav> -->
+<!-- <ejs-richtexteditor id='defaultRTE'>
+  <ng-template #valueTemplate>
+  <p>The Rich Text Editor component is WYSIWYG ("what you see is what you get") editor that provides the best user experience to create and update the content.
+  Users can format their content using standard toolbar commands.</p>
+  <p><b>Key features:</b></p>
+  <ul><li><p>Provides &lt;IFRAME&gt; and &lt;DIV&gt; modes.</p></li>
+  <li><p>Capable of handling markdown editing.</p></li>
+  <li><p>Contains a modular library to load the necessary functionality on demand.</p></li>
+  <li><p>Provides a fully customizable toolbar.</p></li>
+  <li><p>Provides HTML view to edit the source directly for developers.</p></li>
+  <li><p>Supports third-party library integration.</p></li>
+  <li><p>Allows preview of modified content before saving it.</p></li>
+  <li><p>Handles images, hyperlinks, video, hyperlinks, uploads, etc.</p></li>
+  <li><p>Contains undo/redo manager. </p></li>
+  <li><p>Creates bulleted and numbered lists.</p></li>
+  </ul>
+  </ng-template>
+  </ejs-richtexteditor> -->
+  <!-- <app-file-upload></app-file-upload> -->
+  <div>
+    <app-ad-banner [ads]="ads"></app-ad-banner>
+  </div>
 <router-outlet></router-outlet>
